# rmath

./: CMakeLists.txt  README.md
cmake/: RmathConfig.cmake.in
